--- a/LivingWater/Assets/js/directives/template1/house/viewProducts/viewProducts.html
+++ b/LivingWater/Assets/js/directives/template1/house/viewProducts/viewProducts.html
@@ -29,6 +29,13 @@
             <table>
                 <tr>
                     <td>
+                        <select ng-model="productEdit.product_id">
+                            <option ng-repeat="type in productTypes" value="{{type.id}}">{{type.genre}}</option>
+                        </select>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
                         <input type="text" placeholder="Product Title" ng-model="productEdit.item"/>
                     </td>
                 </tr>
@@ -44,15 +51,15 @@
                 </tr>
                 <tr>
                     <td>
-                        <input type="file" />
+                        <input type="file" class="btn btn-md btn-hover btn-success" ng-model="productEdit.source"/>
                     </td>
                     <td>
-                        <img src="{{img}}" />
+                        <img src="{{productEdit.source}}" style="width:200px; height:200px;"/>
                     </td>
                 </tr>
                 <tr>
                     <td>
-                        <input type="button" value="SAVE CHANGES" />
+                        <input type="button" value="SAVE CHANGES" class="btn btn-md btn-hover btn-primary" ng-click="saveChanges_OnClicked()"/>
                      </td>
                 </tr>
             </table>
