--- a/LivingWater/Assets/js/directives/template1/ui/verificationCode/verificationCode.html
+++ b/LivingWater/Assets/js/directives/template1/ui/verificationCode/verificationCode.html
@@ -11,10 +11,10 @@
                 <table>
                     <tr>
                         <td style="padding-right:30px; padding-top:10px">
-                            <input  type="text" placeholder="Enter Verification Code" ng-model="userInput" />
+                            <input  class="form-control" aria-describedby="basic-addon1" type="text" placeholder="Enter Verification Code" ng-model="userInput" />
                         </td>
                         <td style="padding-right:30px; padding-top:10px">
-                            <input type="button" value="Verify" ng-click="Verify()" /> 
+                            <input type="button" class="btn btn-md btn-hover btn-success" value="Verify" ng-click="Verify()" /> 
                         </td>
                     </tr>
                 </table>
