--- a/LivingWater/Assets/js/directives/template2/ui/products/productModify/productModify.html
+++ b/LivingWater/Assets/js/directives/template2/ui/products/productModify/productModify.html
@@ -6,13 +6,13 @@
                     <table style="height:100px;">
                         <tr>
                             <td>
-                                <input type="button" value="ADD" ng-click="ChangeModes(1)" ng-disabled="isAddingEnable" />
+                                <input type="button" value="ADD" ng-click="ChangeModes(1)" ng-disabled="isAddingEnable" class="btn btn-md btn-hover btn-success"/>
                             </td>
                             <td>
-                                <input type="button" value="DELETE" ng-click="ChangeModes(2)" ng-disabled="isDeleteEnable" />
+                                <input type="button" value="DELETE" ng-click="ChangeModes(2)" ng-disabled="isDeleteEnable" class="btn btn-md btn-hover btn-success"/>
                             </td>
                             <td>
-                                <input type="button" value="EDIT" ng-click="ChangeModes(3)" ng-disabled="isEditEnable" />
+                                <input type="button" value="EDIT" ng-click="ChangeModes(3)" ng-disabled="isEditEnable" class="btn btn-md btn-hover btn-success"/>
                             </td>
                         </tr>
                     </table>
@@ -34,7 +34,7 @@
                                 <input type="text" value="" placeholder="Genre" />
                             </td>
                             <td>
-                                <input type="button" value="ADD" ng-click="AddNewProductGenre()" />
+                                <input type="button" value="ADD" ng-click="AddNewProductGenre()" class="btn btn-md btn-hover btn-primary"/>
                             </td>
                         </tr>
                         <tr>
@@ -49,7 +49,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <input type="file" ng-model="imageUploaded" />
+                                <input type="file" ng-model="imageUploaded" class="btn btn-md btn-hover btn-success"/>
                             </td>
                         </tr>
                         <tr>
@@ -65,7 +65,7 @@
                         </tr>
                         <tr>
                             <td>
-                                <input type="button" value="ADD" />
+                                <input type="button" value="ADD" class="btn btn-md btn-hover btn-primary"/>
                             </td>
                         </tr>
                     </table>
