--- a/LivingWater/Assets/js/directives/template1/house/adminDashboard/adminDashboard.html
+++ b/LivingWater/Assets/js/directives/template1/house/adminDashboard/adminDashboard.html
@@ -7,7 +7,38 @@
         </div>
         <div ng-if="isEnableNewsModify">
             <h1>News Modification</h1>
-            
+            <table>
+                <tr>
+                    <td>
+                        <input type="text" placeholder="Title" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <textarea placeholder="News Description"></textarea>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="file" />
+                    </td>
+                    <td>
+                        <img src="" style="width:100px; height:100px;" />
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input type="text" placeholder="Youtube Video Code" />
+                    </td> 
+                </tr>
+
+
+                <tr>
+                    <td>
+
+                    </td>
+                </tr>
+            </table>
         </div>
         <div ng-if="isEnableSettingsModify">
             <h1>Settings</h1>
