--- a/LivingWater/Assets/js/directives/template2/ui/navigationBar/navigationBar.html
+++ b/LivingWater/Assets/js/directives/template2/ui/navigationBar/navigationBar.html
@@ -46,6 +46,7 @@
                             <ul class="dropdown-menu">
                                 <li><a ng-click="goto('/AdminDashboard', 'News')">Manage News</a></li>
                                 <li><a ng-click="goto('/AdminDashboard', 'Products')">Manage Products</a></li>
+                                <li><a ng-click="goto('/AdminDashboard', 'Orders')">Manage Orders</a></li>
                                 <li><a ng-click="goto('/AdminDashboard', 'Settings')">Settings</a></li>
                                 <li class="divider"></li>
                                 <li><a ng-click="goto('/Login')">Logout</a></li>
