commits for this day

--- a/LivingWater/Assets/js/directives/template2/ui/products/productViewFilter/productViewFilter.html
+++ b/LivingWater/Assets/js/directives/template2/ui/products/productViewFilter/productViewFilter.html
@@ -40,7 +40,7 @@
                     </tr>
                     <tr ng-if='showCart'>
                         <td>
-                            <input type="button" value="PURCHASE" ng-if="isEnablePurchase" />
+                            <h1>Cart Here</h1>
                         </td>
                     </tr>
                 </table>
