--- a/LivingWater/Assets/js/directives/template2/ui/products/productViewFilter/productViewFilter.html
+++ b/LivingWater/Assets/js/directives/template2/ui/products/productViewFilter/productViewFilter.html
@@ -41,6 +41,7 @@
                     <tr ng-if='showCart'>
                         <td>
                             <h1>Cart Here</h1>
+                            <cart-component></cart-component>
                         </td>
                     </tr>
                 </table>
