--- a/LivingWater/Assets/js/directives/template1/ui/concernComponent/concernComponent.html
+++ b/LivingWater/Assets/js/directives/template1/ui/concernComponent/concernComponent.html
@@ -54,7 +54,7 @@
                     <verification-code image="choosenVerification"></verification-code>
                 </div>
                 <div class="form-group">
-                    <input type="button" value="CHANGE VERIFICATION" ng-click="changeVerificationCode()" />
+                    <input type="button" value="CHANGE VERIFICATION" ng-click="changeVerificationCode()" class="btn btn-primary"/>
                 </div>
                 <!--Button-->
                 <div class="form-group">
