--- a/LivingWater/Assets/js/directives/template2/ui/newsComponents/newsPreview/newsPreview.html
+++ b/LivingWater/Assets/js/directives/template2/ui/newsComponents/newsPreview/newsPreview.html
@@ -1,35 +1,39 @@
 ﻿<div>
-    <table style="overflow-y:scroll;display:block;width:400px; height:400px;">
-        <tr>
-            <td>
-                <div style="background-color:rgba(255,255,255,0.2); width:400px; height:30px;">
-                    <p style="color:white"><b>TODAYS TOP STORIES</b></p>
-                </div>
-            </td>
-        </tr>
-        <tr ng-repeat="new in news">
-            <td>
-                <div class="borderRadiusRight50px" style="background-color:rgba(0,0,0,0.2); width:300px; height:70px; margin-bottom:10px">
-                        <a ng-click="ShowNewsInformationPreview(new)">
-                            <table>
-                                <tr>
-                                    <td>
+    <div id="wrapper">
+        <div id="scroller">
+            <table>
+                <!--<table style="overflow-y:scroll;display:block;width:400px; height:400px;">-->
+                <tr>
+                    <td>
+                        <div style="background-color:rgba(255,255,255,0.2); width:400px; height:30px;">
+                            <p style="color:white"><b>TODAYS TOP STORIES</b></p>
+                        </div>
+                    </td>
+                </tr>
+                <tr ng-repeat="new in news">
+                    <td>
+                        <div class="borderRadiusRight50px" style="background-color:rgba(0,0,0,0.2); width:300px; height:70px; margin-bottom:10px">
+                            <a ng-click="ShowNewsInformationPreview(new)">
+                                <table>
+                                    <tr>
+                                        <td>
                                             <p style="color:white;" ng-bind="new.title"></p>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>
+                                        </td>
+                                    </tr>
+                                    <tr>
+                                        <td>
                                             <h5 style="color:white;" ng-bind="new.content | limitTo:30"></h5>
-                                    </td>
-                                </tr>
-                            </table>
-                        </a>
-                </div>
-            </td>
-        </tr>
-        <!--New Data Here-->
+                                        </td>
+                                    </tr>
+                                </table>
+                            </a>
+                        </div>
+                    </td>
+                </tr>
+                <!--New Data Here-->
 
-    </table>
+            </table>
+           </div>
+      </div>
 </div>
-
 
